# python-poetry-docker-example

./: Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: lint-and-test.yml
app/: main.py  photo_lib.py
docker/: Dockerfile
pyprocessor/: Dockerfile
pyprocessor/templates/: gallery.html
