[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Minimal Poetry example with Docker Multi-Stage builds"
authors = ["Michael Oliver <mo175@live.com>"]

[tool.poetry.dependencies]
python = "^3.8"

fastapi = "0.52.0"
gunicorn = "^20.0.4"
uvicorn = "^0.11.3"
aiofiles = "^0.7.0"
pyvips = "^2.1.14"
Pillow = "^8.2.0"
opencv-python = "^4.5.2"
grpcio = "^1.34.0"
implicit = "^0.4.4"
requests = "^2.25.1"
sklearn = "^0.0"
tensorflow = "^2.4.1"
tensorflow-serving-api = "^2.5.1"
python-multipart = "^0.0.5"
Jinja2 = "^3.0.1"

[tool.poetry.dev-dependencies]
pytest = "5.3.5"
coverage = { version = "5.0.3", extras = ["toml"]}
black = "^19.10b0"
isort = { version = "^4.3.21", extras = ["pyproject"]}
requests = "^2.23.0"


[tool.black]
# https://github.com/psf/black
line-length = 88
target_version = ['py38']
exclude = '''
(
  /(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | htmlcov
    | venv
    | .venv
  )/
)
'''

[tool.isort]
# https://github.com/timothycrosley/isort
# https://github.com/timothycrosley/isort/wiki/isort-Settings
line_length = 88
indent = '    '
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0


[tool.coverage]
# https://github.com/nedbat/coveragepy
    [tool.coverage.run]

    source = ["app"]
    branch = true
    omit = ['']

    [tool.coverage.report]
    exclude_lines = [
        "# noqa",
        "raise NotImplementedError"
    ]
